fix #14 - Migrate to B3
Signed-off-by: Dawid Pakuła <zulus@w3des.net>